--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -9,8 +9,8 @@ $fa-font-path: "../fonts/webfonts";
 @import "../css/demo.css";
 @import "../css/component.css";
 @import "~magnific-popup";
-//@import "../css/normalize.css";
-//@import "../css/main.css";
+@import "../css/normalize.css";
+@import "../css/main.css";
 @import "~jquery-animated-headlines/src/scss/jquery.animatedheadline";
 
 $davys-grey: #585858;
